--- a/Jupyter_prototype/search_engine_on_crawled_data.ipynb
+++ b/Jupyter_prototype/search_engine_on_crawled_data.ipynb
@@ -56,7 +56,8 @@
     "ExecuteTime": {
      "end_time": "2018-01-22T19:21:10.128634Z",
      "start_time": "2018-01-22T19:17:03.658824Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -67,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_urls_from_url(main_url):\n",
@@ -158,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Searcher():\n",
@@ -343,7 +348,8 @@
     "ExecuteTime": {
      "end_time": "2018-01-22T19:21:48.699686Z",
      "start_time": "2018-01-22T19:21:48.696223Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1033,7 +1039,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1054,7 +1062,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.4"
   },
   "varInspector": {
    "cols": {
